k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: squdy-production
  labels:
    name: squdy-production
    environment: production
